refactor: csv import feature code cleanup