@@ -1,43 +1,39 @@
 package com.lennartmoeller.finance.csv;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 import com.lennartmoeller.finance.dto.CamtV8TransactionDTO;
 import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 class CamtV8CsvParserTest {
     @Test
     void parsesAndSanitizesIban() throws Exception {
         String csv =
-                "\"Auftragskonto\";\"Buchungstag\";\"Valutadatum\";\"Buchungstext\";\"Verwendungszweck\";\"Glaeubiger ID\";\"Mandatsreferenz\";\"Kundenreferenz (End-to-End)\";\"Sammlerreferenz\";\"Lastschrift Ursprungsbetrag\";\"Auslagenersatz Ruecklastschrift\";\"Beguenstigter/Zahlungspflichtiger\";\"Kontonummer/IBAN\";\"BIC (SWIFT-Code)\";\"Betrag\";\"Waehrung\";\"Info\"\n"
-                        + "\"DE12 3456 7890 1234 5678 90\";\"01.01.25\";\"01.01.25\";\"TEXT\";\"purpose\";\"\";\"\";\"\";\"\";\"\";\"\";\"counter\";\"DE87654321\";\"BIC\";\"1,00\";\"EUR\";\"info\"\n";
+                """
+			"Auftragskonto";"Buchungstag";"Valutadatum";"Buchungstext";"Verwendungszweck";"Glaeubiger ID";"Mandatsreferenz";"Kundenreferenz (End-to-End)";"Sammlerreferenz";"Lastschrift Ursprungsbetrag";"Auslagenersatz Ruecklastschrift";"Beguenstigter/Zahlungspflichtiger";"Kontonummer/IBAN";"BIC (SWIFT-Code)";"Betrag";"Waehrung";"Info"
+			"DE12 3456 7890 1234 5678 90";"01.01.25";"01.01.25";"TEXT";"purpose";"";"";"";"";"";"";"counter";"DE87654321";"BIC";"1,00";"EUR";"info"
+			""";
         CamtV8CsvParser parser = new CamtV8CsvParser();
         List<CamtV8TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
         assertEquals(1, list.size());
-        assertEquals("DE12345678901234567890", list.get(0).getIban());
+        assertEquals("DE12345678901234567890", list.getFirst().getIban());
     }
 
     @Test
     void handlesBom() throws Exception {
         String csv =
-                "\uFEFF\"Auftragskonto\";\"Buchungstag\";\"Valutadatum\";\"Buchungstext\";\"Verwendungszweck\";\"Glaeubiger ID\";\"Mandatsreferenz\";\"Kundenreferenz (End-to-End)\";\"Sammlerreferenz\";\"Lastschrift Ursprungsbetrag\";\"Auslagenersatz Ruecklastschrift\";\"Beguenstigter/Zahlungspflichtiger\";\"Kontonummer/IBAN\";\"BIC (SWIFT-Code)\";\"Betrag\";\"Waehrung\";\"Info\"\n"
-                        + "\"DE12\";\"01.01.25\";\"01.01.25\";\"T\";\"p\";\"\";\"\";\"\";\"\";\"\";\"\";\"c\";\"DE\";\"B\";\"1,00\";\"EUR\";\"i\"\n";
+                """
+			\uFEFF"Auftragskonto";"Buchungstag";"Valutadatum";"Buchungstext";"Verwendungszweck";"Glaeubiger ID";"Mandatsreferenz";"Kundenreferenz (End-to-End)";"Sammlerreferenz";"Lastschrift Ursprungsbetrag";"Auslagenersatz Ruecklastschrift";"Beguenstigter/Zahlungspflichtiger";"Kontonummer/IBAN";"BIC (SWIFT-Code)";"Betrag";"Waehrung";"Info"
+			"DE12";"01.01.25";"01.01.25";"T";"p";"";"";"";"";"";"";"c";"DE";"B";"1,00";"EUR";"i"
+			""";
         CamtV8CsvParser parser = new CamtV8CsvParser();
         List<CamtV8TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
         assertEquals(1, list.size());
-    }
-
-    @Test
-    void skipsInvalidLine() throws Exception {
-        String csv = "\"Auftragskonto\";\"Buchungstag\"\ninvalid";
-        CamtV8CsvParser parser = new CamtV8CsvParser();
-        List<CamtV8TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
-        assertTrue(list.isEmpty());
     }
 
     @Test
@@ -47,29 +43,29 @@ class CamtV8CsvParserTest {
         assertTrue(list.isEmpty());
     }
 
-    @Test
-    void skipsShortLine() throws Exception {
-        String csv = "\"Auftragskonto\";\"Buchungstag\";\"Valutadatum\"\n\"DE\";\"01.01.25\"";
-        CamtV8CsvParser parser = new CamtV8CsvParser();
-        List<CamtV8TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
-        assertTrue(list.isEmpty());
+    static List<String> invalidCsvInputs() {
+        return List.of(
+                """
+			"Auftragskonto";"Buchungstag"
+			invalid
+			""",
+                """
+			"Auftragskonto";"Buchungstag";"Valutadatum"
+			"DE";"01.01.25"
+			""",
+                """
+			"Auftragskonto";"Buchungstag";"Valutadatum";"Buchungstext";"Verwendungszweck";"Glaeubiger ID";"Mandatsreferenz";"Kundenreferenz (End-to-End)";"Sammlerreferenz";"Lastschrift Ursprungsbetrag";"Auslagenersatz Ruecklastschrift";"Beguenstigter/Zahlungspflichtiger";"Kontonummer/IBAN";"BIC (SWIFT-Code)";"Betrag";"Waehrung";"Info"
+			"DE";"01.01.25";"01.01.25";"T"
+			""",
+                """
+			"Auftragskonto";"Buchungstag";"Valutadatum";"Buchungstext";"Verwendungszweck";"Glaeubiger ID";"Mandatsreferenz";"Kundenreferenz (End-to-End)";"Sammlerreferenz";"Lastschrift Ursprungsbetrag";"Auslagenersatz Ruecklastschrift";"Beguenstigter/Zahlungspflichtiger";"Kontonummer/IBAN";"BIC (SWIFT-Code)";"Betrag";"Waehrung";"Info"
+			
+			""");
     }
 
-    @Test
-    void mismatchedQuotesIgnored() throws Exception {
-        String csv =
-                "\"Auftragskonto\";\"Buchungstag\";\"Valutadatum\";\"Buchungstext\";\"Verwendungszweck\";\"Glaeubiger ID\";\"Mandatsreferenz\";\"Kundenreferenz (End-to-End)\";\"Sammlerreferenz\";\"Lastschrift Ursprungsbetrag\";\"Auslagenersatz Ruecklastschrift\";\"Beguenstigter/Zahlungspflichtiger\";\"Kontonummer/IBAN\";\"BIC (SWIFT-Code)\";\"Betrag\";\"Waehrung\";\"Info\"\n"
-                        + "\"DE\";\"01.01.25\";\"01.01.25\";\"T";
-        CamtV8CsvParser parser = new CamtV8CsvParser();
-        List<CamtV8TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
-        assertTrue(list.isEmpty());
-    }
-
-    @Test
-    void skipsBlankLine() throws Exception {
-        String csv =
-                "\"Auftragskonto\";\"Buchungstag\";\"Valutadatum\";\"Buchungstext\";\"Verwendungszweck\";\"Glaeubiger ID\";\"Mandatsreferenz\";\"Kundenreferenz (End-to-End)\";\"Sammlerreferenz\";\"Lastschrift Ursprungsbetrag\";\"Auslagenersatz Ruecklastschrift\";\"Beguenstigter/Zahlungspflichtiger\";\"Kontonummer/IBAN\";\"BIC (SWIFT-Code)\";\"Betrag\";\"Waehrung\";\"Info\"\n"
-                        + "\n";
+    @ParameterizedTest
+    @MethodSource("invalidCsvInputs")
+    void skipsInvalidOrShortOrBlankLines(String csv) throws Exception {
         CamtV8CsvParser parser = new CamtV8CsvParser();
         List<CamtV8TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
         assertTrue(list.isEmpty());
@@ -82,16 +78,5 @@ class CamtV8CsvParserTest {
         m.setAccessible(true);
         assertEquals("A", ((String[]) m.invoke(parser, "\"A\""))[0]);
         assertEquals("B", ((String[]) m.invoke(parser, "B"))[0]);
-    }
-
-    @Test
-    void duplicateHeaderThrows() {
-        String csv =
-                "\"Auftragskonto\";\"Buchungstag\";\"Valutadatum\";\"Buchungstext\";\"Verwendungszweck\";\"Glaeubiger ID\";\"Mandatsreferenz\";\"Kundenreferenz (End-to-End)\";\"Sammlerreferenz\";\"Lastschrift Ursprungsbetrag\";\"Auslagenersatz Ruecklastschrift\";\"Beguenstigter/Zahlungspflichtiger\";\"Kontonummer/IBAN\";\"BIC (SWIFT-Code)\";\"Betrag\";\"Waehrung\";\"Info\";\"Info\"\n"
-                        + "\"DE\";\"01.01.25\";\"01.01.25\";\"T\";\"P\";\"\";\"\";\"\";\"\";\"\";\"\";\"C\";\"DE\";\"B\";\"1,00\";\"EUR\";\"first\";\"second\"\n";
-        CamtV8CsvParser parser = new CamtV8CsvParser();
-        assertThrows(
-                IllegalStateException.class,
-                () -> parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8))));
     }
 }
