@@ -8,55 +8,62 @@ import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 class IngV1CsvParserTest {
     @Test
     void parsesAndSanitizesIban() throws Exception {
         String csv =
                 """
-Umsatzanzeige;Datei erstellt am: 27.06.2025 23:40
-
-IBAN;DE12 3456 7890 1234 5678 90
-Buchung;Wertstellungsdatum;Auftraggeber;Buchungstext;Verwendungszweck;Saldo;Währung;Betrag;Währung
-01.01.2025;01.01.2025;Counter;Text;Purpose;100,00;EUR;5,00;EUR
-""";
+				Umsatzanzeige;Datei erstellt am: 27.06.2025 23:40
+				
+				IBAN;DE12 3456 7890 1234 5678 90
+				Buchung;Wertstellungsdatum;Auftraggeber;Buchungstext;Verwendungszweck;Saldo;Währung;Betrag;Währung
+				01.01.2025;01.01.2025;Counter;Text;Purpose;100,00;EUR;5,00;EUR
+				""";
         IngV1CsvParser parser = new IngV1CsvParser();
         List<IngV1TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
         assertEquals(1, list.size());
-        assertEquals("DE12345678901234567890", list.get(0).getIban());
-    }
-
-    @Test
-    void returnsEmptyWithoutHeader() throws Exception {
-        String csv = "IBAN;DE12\nfoo";
-        IngV1CsvParser parser = new IngV1CsvParser();
-        List<IngV1TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
-        assertTrue(list.isEmpty());
-    }
-
-    @Test
-    void skipsInvalidLine() throws Exception {
-        String csv = "IBAN;DE12\nBuchung;Wertstellungsdatum\ninvalid";
-        IngV1CsvParser parser = new IngV1CsvParser();
-        List<IngV1TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
-        assertTrue(list.isEmpty());
+        assertEquals("DE12345678901234567890", list.getFirst().getIban());
     }
 
     @Test
     void parsesDuplicateHeaders() throws Exception {
         String csv =
-                "IBAN;DE12\nBuchung;Wertstellungsdatum;Auftraggeber;Buchungstext;Verwendungszweck;Saldo;Währung;Betrag;Währung;Währung\n01.01.2025;01.01.2025;Counter;Text;Purpose;100,00;EUR;5,00;EUR;EUR";
+                """
+			IBAN;DE12
+			Buchung;Wertstellungsdatum;Auftraggeber;Buchungstext;Verwendungszweck;Saldo;Währung;Betrag;Währung;Währung
+			01.01.2025;01.01.2025;Counter;Text;Purpose;100,00;EUR;5,00;EUR;EUR
+			""";
         IngV1CsvParser parser = new IngV1CsvParser();
         List<IngV1TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
         assertEquals(1, list.size());
-        assertTrue(list.get(0).getData().containsKey("Währung"));
-        assertTrue(list.get(0).getData().containsKey("Währung_9"));
+        assertTrue(list.getFirst().getData().containsKey("Währung"));
+        assertTrue(list.getFirst().getData().containsKey("Währung_9"));
     }
 
-    @Test
-    void skipsBlankLine() throws Exception {
-        String csv =
-                "IBAN;DE12\nBuchung;Wertstellungsdatum;Auftraggeber;Buchungstext;Verwendungszweck;Saldo;Währung;Betrag;Währung\n\n";
+    static List<String> invalidCsvInputs() {
+        return List.of(
+                """
+			IBAN;DE12
+			foo
+			""",
+                """
+			IBAN;DE12
+			Buchung;Wertstellungsdatum
+			invalid
+			""",
+                """
+			IBAN;DE12
+			Buchung;Wertstellungsdatum;Auftraggeber;Buchungstext;Verwendungszweck;Saldo;Währung;Betrag;Währung
+			
+			""");
+    }
+
+    @ParameterizedTest
+    @MethodSource("invalidCsvInputs")
+    void returnsEmptyForInvalidOrBlankLines(String csv) throws Exception {
         IngV1CsvParser parser = new IngV1CsvParser();
         List<IngV1TransactionDTO> list = parser.parse(new ByteArrayInputStream(csv.getBytes(StandardCharsets.UTF_8)));
         assertTrue(list.isEmpty());
